# filestat

./: .gitignore  Cargo.toml  Readme.md  config.toml  entitlements.plist  extension_stats.csv  largest_files.csv  result_report.json  scan_stats.csv  stats.json
.snapshots/: snapshot.json
config/: agent.toml
src/: clap_config.rs  main.rs  metadata.rs  models.rs  scanner.rs  stats.rs
src/agent/: agent.rs
src/alerts/: alerts.rs
src/config/: toml_parser.rs
src/files/: csv.rs  json.rs
src/filters/: extension.rs  file_size.rs  ignore.rs  mod.rs
src/fim/: metadata.rs  mod.rs  models.rs  module.rs  scanner.rs  stats.rs
src/fim/alerts/: alerts.rs  mod.rs
src/fim/files/: csv.rs  json.rs
src/fim/filters/: extension.rs  file_size.rs  ignore.rs
src/fim/hashing/: get_duplicates.rs  mod.rs
src/fim/snapshot/: snapshot.rs
src/fim/watch/: alert.rs  baseline_builder.rs  baseline_store.rs  critical_path.rs  display_event.rs  models.rs  watch.rs
src/hashing/: get_duplicates.rs  hash_file.rs
src/process_monitor/: mod.rs  process.rs
src/process_monitor/helpers/: decode_cmd_hex.rs  mod.rs
src/process_monitor/providers/: auditd.rs  esf_provider.rs  mod.rs
src/snapshot/: mod.rs  model.rs  save_snapshot.rs  snapshot.rs
src/storage/: db.rs
src/utils/: mod.rs  size_parser.rs
src/watch/: alert.rs  baseline_builder.rs  baseline_store.rs  critical_path.rs  display_event.rs  mod.rs  models.rs  watch.rs
