[package]
name = "filestat"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
clap = { version = "4.0.0", features = ["derive"]}
anyhow = "1"
serde = { version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"
csv = "1.4.0"
regex = "1.12.3"
blake3 = "1.8.5"
rayon = "1.12.0"
notify = { version = "8.2.0", features = ["serde"]}
toml = "0.9.8"
rusqlite = { version = "0.40.1", features = ["bundled"]}
dirs = "6.0.0"
os_info = "3.15.0"
hex = "0.4.3"

[target.'cfg(target_os= "macos")'.dependencies]
endpoint-sec = { version = "0.6.0", features = ["audit_token_from_pid"]}
nix = { version = "0.31.3", features = ["user"]}

[target.'cfg(target_os= "linux")'.dependencies]
netlink-sys = "0.8.8"